--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,8 @@ TIDB_URL=
 NEXT_PUBLIC_API_BASE_URL=
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
+DIFY_TOKEN=
+AGENTIC_MIDDLEWARE_URL=
+UPSTASH_REDIS_REST_URL=
+UPSTASH_REDIS_REST_TOKEN=
+POST_LIMIT=
