--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@tanstack/react-query": "^5.84.1",
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.3",
+    "@vercel/analytics": "^1.5.0",
     "@xyflow/react": "^12.8.3",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
